src/app/styles/scrambled.css
.backstory-main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100vh;
  position: relative;
}

h1.backstory-title {
  display: flex;
  justify-content: center;
  font-size: 1.5rem;
  width: 100%;
}

.backstory-text-scrambled-scrollbar-wrapper {
  border-radius: 0.5rem;
  border: 2px solid rgb(51, 51, 51);
  overflow: hidden;
}

.backstory-text-scrambled {
  --step-duration: 0.01s;

  display: flex;
  flex-direction: row;
  flex-grow: 0;
  align-content: start;
  flex-wrap: wrap;
  row-gap: 1em;
  padding: 0.625rem;
  width: 65vw;
  height: 75vh;
  overflow-x: hidden;
  overflow-y: auto;
  scrollbar-gutter: stable;
  scrollbar-width: thin;
  scrollbar-color: currentColor transparent;
  background-color: rgba(0, 0, 0, 0.75);
  font-family: monospace;

  .word-container {
    display: inline-grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    align-items: center;
    width: 0px;
    animation:
      reveal calc(var(--n)*var(--step-duration)) steps(var(--n)) forwards;
    animation-delay: calc(var(--delay)*var(--step-duration));
  }

  .word {
    /* word text */
    grid-area: 1 / 1 / 2 / 2;
    display: inline-block;
    width: 0px;
    overflow: hidden;
    white-space: pre;
    color: currentColor;
    animation:
      reveal calc(var(--n)*var(--step-duration)) steps(var(--n)) forwards;
    animation-delay: calc(var(--delay)*var(--step-duration) + var(--n)*var(--step-duration));
  }

  .backstory-paragraph {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
  }

}

@keyframes reveal {
  0% {
    width: 0px;
  }

  100% {
    width: calc(var(--n)*1ch);
  }
}

.backstory-button-container {
  display: flex;
  position: relative;
  z-index: 10;
  width: 65vw;
  margin-block: 0.5rem;
  padding: 0.125rem;
  justify-content: space-between;
  background-color: rgb(0, 0, 0);
  border: 1px solid rgba(255, 255, 255, 0.2);
  border-radius: 0.5rem;

  a,
  button {
    border: none;
    border-radius: inherit;
    padding-block: 0;
    padding-inline: 0.5rem;
    font-weight: 400;
    background-color: var(--accent-color);
    cursor: pointer;

    &:disabled {
      color: grey;
      background-color: rgba(128, 128, 128, 0.5);
    }

    &.next-btn {
      margin-left: auto;
    }
  }
}

